k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: url-shortener-backend-service
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: url-shortener-backend-service
                port:
                  number: 8080
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: url-shortener-backend-service
                port:
                  number: 8080
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: url-shortener-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-shortener-frontend-service
                port:
                  number: 3000
